--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
     "node-sass": "4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
     "react-router": "5.0.1",
-    "react-router-dom": "5.0.1",
+    "react-router-dom": "latest",
     "redux": "^4.0.1",
-    "redux-thunk": "2.3.0",
+    "redux-thunk": "^2.3.0",
     "reselect": "^4.0.0",
     "sass": "1.22.12"
   },
